--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,54 @@ img{
 .nav-right{
     display: flex;
     align-items: center;
-}
-nav a:hover{
-    border-bottom: 3px solid #f7EDE2;
+    margin-left: 0.6rem;
 }
 .nav-right a{
     padding: 1rem;
     border-bottom: 3px solid transparent;
     border-top: 3px solid transparent;
 }
+.nav-right a:hover{
+    padding: 1rem;
+    border-bottom: 3px solid #f7EDE2;
+    border-top: 3px solid transparent;
+}
+
+.login{
+    background-color: #f7EDE2;
+    color: black;
+    padding: 0.5rem 1.9rem 0.5rem 1.9rem;
+    margin-right: 2rem;
+    border-radius: 0.5rem;
+    font-size: 0.8rem;
+    text-decoration: none;
+}
+footer{
+    background-color: #84A59D;
+    width: 100%;
+    font-family: 'Libre Baskerville', serif;
+    position: fixed;
+    bottom: 0;
+    padding:0;
+}
+.footer-style{
+    margin: 0.3rem 1rem 0.2rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 3px solid #f7EDE2;
+}
+.footer-main-text{
+    color: #f7EDE2;
+}
+.footer-style img{
+    margin-left: 1rem;
+    margin-bottom: 0.3rem;
+    width: 4rem;
+}
+footer p{
+    margin: 0.3rem;
+}
+
+
 
