--- a/css/style.css
+++ b/css/style.css
@@ -69,5 +69,11 @@ footer p{
     margin: 0.3rem;
 }
 
+.table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+}
 
 
