--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Libre+Baskerville&family=Mulish&family=Roboto+Mono:wght@300&family=Titan+One&display=swap');
 body{
     margin:0;
+    background-color: white;
+    background-image: url(../img/food1.jpeg);
 }
 nav{
     background-color: #84A59D;
@@ -82,7 +84,14 @@ footer p{
 }
 
 .reservation-box{
-    max-width: 50vw;
+    max-width: 40vw;
     margin: auto;
+    background-color: #f7EDE2;
+    height: 100vh;
+    margin-top: 0;
+    padding: 2rem;
+}
+.reservation-box h1{
+    margin-top: 0;
 }
 
