--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Libre+Baskerville&family=Mulish&family=Roboto+Mono:wght@300&family=Titan+One&display=swap');
 body{
     margin:0;
-    background-color: white;
-    background-image: url(../img/food1.jpeg);
+    background-image: url(../img/bg.png);
 }
+
 nav{
     background-color: #84A59D;
     width: 100%;
