--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,10 @@ footer{
     margin-bottom: 0.3rem;
     width: 4rem;
 }
+.form-box{
+    display: flex;
+    justify-content: center;
+}
 footer p{
     margin: 0.3rem;
 }
@@ -85,13 +89,14 @@ footer p{
 
 .reservation-box{
     max-width: 40vw;
-    margin: auto;
     background-color: #f7EDE2;
     height: 100vh;
     margin-top: 0;
     padding: 2rem;
+    display:flex;
 }
 .reservation-box h1{
     margin-top: 0;
 }
+
 
