CSS kleine wijziging, JS toegevoegd om bezette datums te checken.

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ footer p{
     margin-top: 0;
     padding: 2rem;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
 .reservation-box h1{
     margin-top: 0;
