--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ footer p{
     max-width: 40vw;
     background-color: #f7EDE2;
     height: 100vh;
-    margin-top: 0;
+    margin-top: auto;
     padding: 2rem;
     display: flex;
     flex-direction: column;
