--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -90,7 +90,9 @@ footer p{
     height: 100vh;
     margin-top: 0;
     padding: 2rem;
-    display:flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .reservation-box h1{
     margin-top: 0;
@@ -98,5 +100,6 @@ footer p{
 form{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
