Css van login en registreer pagina. nog niet definitief

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ input{
     border: 2px solid #2D3835;
     border-radius: 4px;
 }
+/* deze comment moet om even te pushen */
 form button{
     background-color: #84A59D;
     color: #f7EDE2;
