--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
     background-image: url(../img/bg.png);
     font-family: 'Open Sans', sans-serif;
 }
-
+/* nav css */
 nav{
     background-color: #84A59D;
     width: 100%;
@@ -46,6 +46,7 @@ img{
     font-size: 0.8rem;
     text-decoration: none;
 }
+/* footer style */
 footer{
     background-color: #84A59D;
     width: 100%;
@@ -69,37 +70,13 @@ footer{
     margin-bottom: 0.3rem;
     width: 4rem;
 }
-.form-box{
-    display: flex;
-    justify-content: center;
-}
+
 footer p{
     margin: 0.3rem;
 }
-
-.flex-side{
+.form-box{
     display: flex;
-}
-.flex-down{
-    display: flex;
-    flex-direction: column;
-}
-.available-time{
-    display: flex;
-    gap: 1rem;
-}
-
-.reservation-box{
-    max-width: 40vw;
-    background-color: #f7EDE2;
-    height: 100vh;
-    margin: auto;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-}
-.reservation-box h1{
-    margin-top: 0;
+    justify-content: center;
 }
 
 .hidden-meta-data{
@@ -135,7 +112,7 @@ input{
     border: 2px solid #2D3835;
     border-radius: 4px;
 }
-/* deze comment moet om even te pushen */
+
 form button{
     background-color: #84A59D;
     color: #f7EDE2;
@@ -156,4 +133,89 @@ form button:hover{
     margin: 4px 2px;
     cursor: pointer;
 }
+/* reservation css */
+.catering-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+}
+.workshop-box{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    align-items: center;
+}
+.catering{
+    padding: 3px;
+    border: 3px solid #F5CAC3;
+    border-radius: 50%;
+}
+.workshop{
+    padding: 3px;
+    border: 3px solid #F5CAC3;
+    border-radius: 50%;
+}
+.section1 h1{
+    text-align: center;
+}
 
+.flex-side{
+    display: flex;
+    justify-content: center;
+}
+.flex-down{
+    display: flex;
+    flex-direction: column;
+}
+.available-time{
+    display: flex;
+    gap: 1rem;
+}
+
+.reservation-box{
+    max-width: 40vw;
+    background-color: #f7EDE2;
+    height: 100vh;
+    margin: auto;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+.reservation-box h1{
+    margin-top: 0;
+}
+.flex-down label{
+    text-align: center;
+    font-size: 1.5rem;
+}
+.flex-people{
+    display: flex;
+    align-items: center;
+}
+
+.right-button{
+    background-color: #84A59D;
+    color: #f7EDE2;
+    padding: 5px 20px;
+    border: 2px solid #84A59D;
+    border-radius: 20%;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.available-time{
+    background-color: #84A59D;
+    color: #f7EDE2;
+    margin: 1rem 0;
+    padding: 0 0.5rem;
+    border: 2px solid #84A59D;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.available-time div{
+    display: flex;
+    flex-direction: row;
+}
