--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,7 @@ form button:hover{
     margin: 4px 2px;
     cursor: pointer;
 }
+/* hoi hoi */
 .available-time{
     background-color: #84A59D;
     color: #f7EDE2;
