--- a/css/style.css
+++ b/css/style.css
@@ -313,4 +313,64 @@ button:hover{
     display: flex;
     flex-direction: column;
 }
+/* css admin pagina */
+.admin-box{
+    max-width: 100%;
+    background-color: white;
+    height: 100%;
+    padding-bottom: 5rem;
+    margin-top: 0;
+}
+/* sidebar */
+/* The side navigation menu */
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 3.5rem;
+    background-color: #F5CAC3;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+
+/* Sidebar links */
+.sidebar a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+}
+
+/* Active/current link */
+.sidebar a.active {
+    background-color: #f28482;
+    color: white;
+}
+
+/* Links on mouse-over */
+.sidebar a:hover:not(.active) {
+    background-color: #f28482;
+    color: white;
+}
+
+
+/* On screens that are less than 700px wide, make the sidebar into a topbar
+@media screen and (max-width: 700px) {
+    .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidebar a {float: left;}
+    div.content {margin-left: 0;}
+}
+
+ On screens that are less than 400px, display the bar vertically, instead of horizontally
+@media screen and (max-width: 400px) {
+    .sidebar a {
+        text-align: center;
+        float: none;
+    }
+}
+*/
 
