--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,9 @@ button:hover{
     color: white;
 }
 
+#amount_people{
+    max-width: 5vw;
+}
 
 /* On screens that are less than 700px wide, make the sidebar into a topbar
 @media screen and (max-width: 700px) {
