--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Libre+Baskerville&family=Mulish&family=Roboto+Mono:wght@300&family=Titan+One&display=swap');
 h1 {
+    padding: 1vw 0.5vw 0vw 0.5vw;
     margin-top: 30vh;
     font-family: 'Open Sans', sans-serif;
     color: white;
@@ -12,4 +13,23 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.indexLink {
+    margin: 0vw 1vw 1vw 1vw;
+    padding: 1vw;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    text-align: center;
+    background-color: #84A59D;
+    border-radius: 1vw;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.block {
+    background-color: #F5CAC3;
+    margin: auto;
+    width: 50%;
+    border-radius: 1vw;
 }
