--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ h1 {
     padding: 1vw 0.5vw 0vw 0.5vw;
     margin-top: 30vh;
     font-family: 'Open Sans', sans-serif;
-    color: white;
+    color: #f7EDE2;
     text-align: center;
     font-size: 5rem;
     text-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -19,11 +19,23 @@ h1 {
     margin: 0vw 1vw 1vw 1vw;
     padding: 1vw;
     font-family: 'Open Sans', sans-serif;
-    color: white;
+    color: #f7EDE2;
     text-align: center;
     background-color: #84A59D;
     border-radius: 1vw;
     text-decoration: none;
+    font-size: 1.2rem;
+}
+
+.indexLink:hover {
+    margin: 0vw 1vw 1vw 1vw;
+    padding: 1vw;
+    font-family: 'Open Sans', sans-serif;
+    color: #f7EDE2;
+    text-align: center;
+    background-color: #84A59D;
+    border-radius: 1vw;
+    text-decoration: underline;
     font-size: 1.2rem;
 }
 
