--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,7 @@ button:hover{
     border: 3px solid #F5CAC3;
     border-radius: 50%;
 }
+
 .section1 h1{
     text-align: center;
 }
@@ -285,6 +286,7 @@ button:hover{
 [type = radio]:checked + div{
     border: 5px solid #2D3835;
 }
+
 .flex-people button{
     background-color: #F5CAC3;
     border: 2px solid #F5CAC3;
@@ -313,14 +315,7 @@ button:hover{
     display: flex;
     flex-direction: column;
 }
-/* css admin pagina */
-.admin-box{
-    max-width: 100%;
-    background-color: white;
-    height: 100%;
-    padding-bottom: 5rem;
-    margin-top: 0;
-}
+
 /* sidebar */
 /* The side navigation menu */
 .sidebar {
@@ -379,4 +374,87 @@ button:hover{
     }
 }
 */
+/* css admin pagina */
+.admin-box{
+    margin-left: 3.5rem;
+    max-width: 100%;
+    background-color: white;
+    height: 100vh;
+    padding-bottom: 5rem;
+    margin-top: 0;
+    display: flex;
+    flex-direction: row;
+    padding: 1rem;
+}
+.admin-section1{
+    flex-grow: 1.2;
+    height: 80vh;
+    margin: 1rem;
+}
+.admin-section2{
+    flex-grow: 1;
+    height: 40vh;
+    background-color: #f7EDE2;
+    border-radius: 1rem;
+    margin: 1rem;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.admin-section3{
+    flex-grow: 1.6;
+    background-color: #f7EDE2;
+    border-radius: 1rem;
+    height: 82vh;
+    margin: 1rem;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.admin-reservations{
+    height: 40vh;
+    background-color: #f7EDE2;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.admin-box h1{
+    font-size: 1.5rem;
+    color: #2D3835;
+    margin: 0;
+}
+.admin-reservation{
+    background-color: white;
+    border-radius: 1rem;
+    height: 40%;
+    width: 100%;
+    padding: 1rem;
+    margin: 0.5rem;
+}
+.admin-reservation div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+.admin-reservation div p{
+    margin: 0;
+}
+.admin-reservation a{
+    background-color: #84A59D;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    color: #f7EDE2;
+    text-decoration: none;
+}
+.admin-reservation h2{
+    margin: 0;
+}
 
