--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ h1 {
     padding: 1vw 0.5vw 0vw 0.5vw;
     margin-top: 30vh;
     font-family: 'Open Sans', sans-serif;
-    color: #f7EDE2;
+    color: #f28482;
     text-align: center;
     font-size: 5rem;
     text-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -40,7 +40,7 @@ h1 {
 }
 
 .block {
-    background-color: #F5CAC3;
+    background-color: #f7EDE2;
     margin: auto;
     width: 50%;
     border-radius: 1vw;
