--- a/css/style.css
+++ b/css/style.css
@@ -323,8 +323,8 @@ button:hover{
     padding: 0;
     width: 3.5rem;
     background-color: #F5CAC3;
-    position: absolute;
-    height: 100%;
+    position: fixed;
+    height: 100vh;
     overflow: auto;
 }
 
@@ -534,3 +534,45 @@ button:hover{
     align-items: stretch;
     flex-direction: column;
 }
+/* admin reservations css */
+.info-reservation{
+    width: 100%;
+    background-color: #f7EDE2;
+    padding: 1rem;
+    border-radius: 1rem;
+    height: auto;
+    margin: 1rem;
+}
+p{
+    padding:0;
+    margin-top: 0;
+}
+.info-reservation h2{
+    margin: 0;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+.info-reservation-box{
+    margin-left: 3.5rem;
+    max-width: 100%;
+    background-color: white;
+    height: 100%;
+    padding-bottom: 5rem;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin-bottom: 3rem;
+}
+.section2 a{
+    background-color: #84A59D;
+    color: #f7EDE2;
+    padding: 16px 32px;
+    border: 2px solid #84A59D;
+    border-radius: 4px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-size: 0.8rem;
+}
+
