--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body{
     background-image: url(../img/bg.png);
     font-family: 'Open Sans', sans-serif;
 }
+header{
+    padding-bottom: 3.5rem;
+}
 /* nav css */
 nav{
     background-color: #84A59D;
@@ -13,6 +16,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
 }
 .header-link-text{
     text-decoration: none;
@@ -319,7 +323,6 @@ button:hover{
 /* sidebar */
 /* The side navigation menu */
 .sidebar {
-    margin: 0;
     padding: 0;
     width: 3.5rem;
     background-color: #F5CAC3;
@@ -381,10 +384,12 @@ button:hover{
     background-color: white;
     height: 100vh;
     padding-bottom: 5rem;
-    margin-top: 0;
     display: flex;
     flex-direction: row;
-    padding: 1rem;
+
+}
+.admin-box h2{
+    font-size: 1.2rem;
 }
 .admin-section1{
     flex: 1.5;
@@ -406,7 +411,7 @@ button:hover{
     flex: 1.5;
     background-color: #f7EDE2;
     border-radius: 1rem;
-    height: 82vh;
+    height: 89vh;
     margin: 1rem;
     padding: 0.5rem;
     display: flex;
@@ -432,9 +437,9 @@ button:hover{
     background-color: white;
     border-radius: 1rem;
     height: 40%;
-    width: 100%;
+    width: 90%;
     padding: 1rem;
-    margin: 0.5rem;
+    margin: 1rem;
 }
 .admin-reservation div{
     display: flex;
@@ -460,7 +465,7 @@ button:hover{
 .admin-text{
     background-color: white;
     height: 100%;
-    width: 100%;
+    width: 90%;
     border-radius: 1rem;
     margin: 0.3rem;
     display: flex;
@@ -477,6 +482,7 @@ button:hover{
     color: #f7EDE2;
     padding: 0.5rem;
     align-self: center;
+    margin-bottom: 2rem;
 }
 .message{
     display: flex;
@@ -502,11 +508,14 @@ button:hover{
 .person{
     border-radius: 50%;
     background-color: #f7EDE2;
-    height: 100%;
+    height: 4rem;
     aspect-ratio: 1/1;
     align-self: center;
-    padding: 1rem;
     margin-right: 1rem;
+}
+.person h1{
+    padding: 1rem;
+    text-align: center;
 }
 .message h2{
     margin: 0;
@@ -574,5 +583,14 @@ p{
     margin: 4px 2px;
     cursor: pointer;
     font-size: 0.8rem;
+}
+.calender-box{
+        margin-left: 3.5rem;
+        max-width: 100%;
+        background-color: white;
+        padding-bottom: 5rem;
+        display: flex;
+        flex-direction: row;
+    justify-content: center;
 }
 
