--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 h1 {
     padding: 1vw 0.5vw 0vw 0.5vw;
     font-family: 'Open Sans', sans-serif;
-    color: #f28482;
+    color: #2D3835;
     text-align: center;
     font-size: 5rem;
 
@@ -10,7 +10,7 @@ h1 {
 main{
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 }
 
 .links {
