--- a/css/style.css
+++ b/css/style.css
@@ -546,9 +546,9 @@ button:hover{
 }
 /* admin reservations css */
 .info-reservation{
-    width: 45%;
+    width: 42%;
     background-color: #f7EDE2;
-    padding: 1rem;
+    padding: 2rem;
     border-radius: 1rem;
     height: auto;
     margin: 1rem;
@@ -561,6 +561,16 @@ p{
     margin: 0;
     font-size: 1.5rem;
     margin-bottom: 1rem;
+}
+.info-reservation a{
+    background-color: #84A59D;
+    color: #f7EDE2;
+    padding: 6px 16px;
+    border: 2px solid #84A59D;
+    border-radius: 4px;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 0.8rem;
 }
 .info-reservation-box{
     margin-left: 3.5rem;
