--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,12 @@ main{
 
 .block {
     background-color: #f7EDE2;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3rem;
     width: 50%;
     border-radius: 1vw;
+}
+.block h1{
+    margin-top:0;
 }
