--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,16 @@ p{
     cursor: pointer;
     font-size: 0.8rem;
 }
+.info-reservation-user a{
+    background-color: #84A59D;
+    color: #f7EDE2;
+    padding: 6px 16px;
+    border: 2px solid #84A59D;
+    border-radius: 4px;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 0.8rem;
+}
 .info-reservation1 h2{
     margin: 0;
     font-size: 1.5rem;
@@ -610,7 +620,7 @@ p{
     margin-left: 3.5rem;
     max-width: 100%;
     background-color: white;
-    height: 100%;
+    height: auto;
     padding-bottom: 5rem;
     margin-top: 0;
     display: flex;
@@ -620,13 +630,14 @@ p{
     flex-wrap: wrap;
 }
 .user-reservations{
-    padding-left: 4.5rem;
-    max-width: 100%;
-    background-color: white;
-    height: 100vh;
-    margin-top: 0;
-    display: flex;
-    flex-direction: column;
+        display: flex;
+        width: 50vw;
+        background-color: #f7EDE2;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        flex-shrink: 0;
+        padding-bottom: 4rem;
 }
 .info-reservation-box1{
     width: 80%;
@@ -691,5 +702,13 @@ p{
 .insta{
     margin-left: 1rem;
     width: 2.3rem;
+}
+.info-reservation-user{
+    width: 80%;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    height: 40%;
+    margin: 1rem;
 }
 
