--- a/css/style.css
+++ b/css/style.css
@@ -620,7 +620,7 @@ p{
     margin-left: 3.5rem;
     max-width: 100%;
     background-color: white;
-    height: auto;
+    height: 100%;
     padding-bottom: 5rem;
     margin-top: 0;
     display: flex;
@@ -697,6 +697,15 @@ p{
         display: flex;
         flex-direction: row;
     justify-content: center;
+}
+
+.resulWrapper{
+    display: flex;
+    gap: 0.25rem
+}
+
+.searchbar{
+    background-color: white;
 }
 
 .insta{
