fixed callender css

--- a/css/example.css
+++ b/css/example.css
@@ -19,11 +19,24 @@
     flex-direction: row;
 }
 .content-home a{
-    /*background-color: #84A59D;*/
-    /*padding: 0.5rem;*/
-    /*border-radius: 0.3rem;*/
     color: #f7EDE2;
-    /*text-decoration: none;*/
-    /*align-self: flex-start;*/
-    /*margin: 1rem;*/
+}
+
+.linkOne{
+    background-color: #84A59D;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    color: #f7EDE2;
+    text-decoration: none;
+    align-self: flex-start;
+    margin: 1rem;
+}
+.linkTwo{
+    background-color: #84A59D;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    color: #f7EDE2;
+    text-decoration: none;
+    align-self: flex-start;
+    margin: 1rem;
 }
