toegevoegd: buttons bij gebruikers paneel admin pagina. aangepast: CSS van class=block CSS aangepast van buttons op de admin pagina trash.png vervangen voor beter plaatje

--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,8 @@ main{
     margin-bottom: 3rem;
     width: 50%;
     border-radius: 1vw;
+    margin-top: 5vw;
+
 }
 .block h1{
     margin-top:0;
