--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 body{
     margin:0;
-    /* background-image: url(../img/bg.png); */
+    background-image: url(../img/wallpaper.png);
     font-family: 'Open Sans', sans-serif;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 header{
     padding-bottom: 3.5rem;
@@ -221,6 +225,9 @@ button:hover{
 }
 .reservation-box h1{
     margin-top: 0;
+    text-align: center;
+    font-family: 'Libre Baskerville', serif;
+
 }
 .flex-down label{
     text-align: center;
@@ -669,6 +676,7 @@ p{
 .date-reservation-box{
     margin-left: 3.5rem;
     max-width: 100%;
+    min-height: 100vh;
     background-color: white;
     height: 100%;
     padding-bottom: 5rem;
