--- a/css/index.css
+++ b/css/index.css
@@ -32,25 +32,18 @@ main{
 }
 
 .indexLink:hover {
-    margin: 0vw 1vw 1vw 1vw;
-    padding: 1vw;
-    font-family: 'Open Sans', sans-serif;
-    color: #f7EDE2;
-    text-align: center;
-    background-color: #84A59D;
-    border-radius: 1vw;
-    text-decoration: underline;
-    font-size: 1.2rem;
+    background-color: #4d5f5c;
 }
 
 .block {
     background-color: #f7EDE2;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3rem;
+    margin: 0% 25%;;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
     width: 50%;
     border-radius: 1vw;
-    margin-top: 5vw;
 
 }
 .block h1{
