--- a/css/news.css
+++ b/css/news.css
@@ -14,10 +14,11 @@ main {
 }
 
 .instaimg {
-    padding: 2rem;
-    height: 25%;
-    width: 25%;
+    padding: 1rem;
+    height: 30%;
+    width: 30%;
     border-radius: 3rem;
+    margin: auto;
 }
 
 .instatext {
@@ -31,7 +32,8 @@ h1 {
     text-align: center;
     background-color: #F7EDE2;
     padding: 1rem 0 1rem 0;
-    width: 100vw;
+    width: 63vw;
+    border-radius: 3rem;
     font-family: 'Libre Baskerville', serif;
 }
 
@@ -44,8 +46,8 @@ h1 {
     flex-direction: row;
     margin: 1rem;
     margin-bottom: 3rem;
-    padding: 0vw 20vw;
+    padding: 0vw 2vw;
     width: 60vw;
-    border-radius: 0rem;
+    border-radius: 3rem;
     background-color: #F7EDE2;
 }
