Admin pagina meer reserveringen lateb zien

--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,14 @@ button:hover{
     color: #f7EDE2;
     text-decoration: none;
     align-self: flex-start;
-    margin: 1rem;
+}
+.button-user-edit {
+    background-color: #84A59D;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    color: #f7EDE2;
+    text-decoration: none;
+    align-self: flex-start;
 }
 
 .admin-section3 a:hover {
