--- a/css/index.css
+++ b/css/index.css
@@ -1,55 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Libre+Baskerville&family=Mulish&family=Roboto+Mono:wght@300&family=Titan+One&display=swap');
-h1 {
-    padding: 1vw 0.5vw 0vw 0.5vw;
-    font-family: 'Open Sans', sans-serif;
-    color: #2D3835;
-    text-align: center;
-    font-size: 5rem;
-}
-main{
-    display: flex;
-    align-items: center;
-    height: 100%;
+@media only screen and (min-width: 769px) {
+    h1 {
+        padding: 1vw 0.5vw 0vw 0.5vw;
+        font-family: 'Open Sans', sans-serif;
+        color: #2D3835;
+        text-align: center;
+        font-size: 5rem;
+    }
+    main{
+        display: flex;
+        align-items: center;
+        height: 100%;
+    }
+
+    .links {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .indexLink {
+        margin: 0vw 1vw 1vw 1vw;
+        padding: 1vw;
+        font-family: 'Open Sans', sans-serif;
+        color: #f7EDE2;
+        text-align: center;
+        background-color: #84A59D;
+        border-radius: 1vw;
+        text-decoration: none;
+        font-size: 1.2rem;
+    }
+
+    .indexLink:hover {
+        background-color: #4d5f5c;
+    }
+
+    .block {
+        background-color: #f7EDE2;
+        margin: 0% 25%;;
+        position: absolute;
+        top: 50%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        width: 50%;
+        border-radius: 1vw;
+
+    }
+    .block h1{
+        margin-top:0;
+        font-family: 'Libre Baskerville', serif;
+    }
+
+    .top {
+        margin-bottom: 0;
+    }
 }
 
-.links {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
 
-.indexLink {
-    margin: 0vw 1vw 1vw 1vw;
-    padding: 1vw;
-    font-family: 'Open Sans', sans-serif;
-    color: #f7EDE2;
-    text-align: center;
-    background-color: #84A59D;
-    border-radius: 1vw;
-    text-decoration: none;
-    font-size: 1.2rem;
-}
 
-.indexLink:hover {
-    background-color: #4d5f5c;
-}
 
-.block {
-    background-color: #f7EDE2;
-    margin: 0% 25%;;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    width: 50%;
-    border-radius: 1vw;
+@media only screen and (max-width: 768px) {
+    h1 {
+        padding: 1vw 0.5vw 0vw 0.5vw;
+        font-family: 'Open Sans', sans-serif;
+        color: #2D3835;
+        text-align: center;
+        font-size: 3rem;
 
-}
-.block h1{
-    margin-top:0;
-    font-family: 'Libre Baskerville', serif;
-}
 
-.top {
-    margin-bottom: 0;
+    }
+
+    main {
+        display: flex;
+        align-items: center;
+        height: 100%;
+    }
+
+    .links {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .indexLink {
+        margin: 0vw 1vw 1vw 1vw;
+        padding: 1vw;
+        font-family: 'Open Sans', sans-serif;
+        color: #f7EDE2;
+        text-align: center;
+        background-color: #84A59D;
+        border-radius: 1vw;
+        text-decoration: none;
+        font-size: 1.2rem;
+    }
+
+    .indexLink:hover {
+        margin: 0vw 1vw 1vw 1vw;
+        padding: 1vw;
+        font-family: 'Open Sans', sans-serif;
+        color: #f7EDE2;
+        text-align: center;
+        background-color: #84A59D;
+        border-radius: 1vw;
+        text-decoration: underline;
+        font-size: 1.2rem;
+    }
+
+    .block {
+        background-color: #f7EDE2;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 3rem;
+        width: 75%;
+        border-radius: 1vw;
+        margin-top: 10vw;
+
+    }
+
+    .block h1 {
+        margin-top: 0;
+    }
+
 }
