--- a/css/news.css
+++ b/css/news.css
@@ -73,6 +73,7 @@
         padding: 2rem;
         height: 70%;
         width: 70%;
+        border-radius: 3rem;
 
     }
 
@@ -94,5 +95,20 @@
         padding: 1rem 0 1rem 0;
         border-radius: 1rem;
         margin-top: 10%;
+    }
+
+    .spacer {
+        height: 3vw;
+    }
+
+    .block-news {
+        display: flex;
+        flex-direction: column;
+        margin: 1rem;
+        margin-bottom: 3rem;
+        padding: 0vw 2vw;
+        width: 60vw;
+        border-radius: 1.5rem;
+        background-color: #F7EDE2;
     }
 }
