--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,7 @@ body{
 
     .section1 h1 {
         text-align: center;
+
     }
 
     .flex-side {
@@ -1434,6 +1435,8 @@ body{
 
     .reservation-box h1 {
         margin-top: 0;
+        text-align: center;
+        font-family: 'Libre Baskerville', serif;
     }
 
     .flex-down label {
