--- a/css/index.css
+++ b/css/index.css
@@ -83,8 +83,10 @@
     }
 
     .indexLink {
-        margin: 0vw 1vw 1vw 1vw;
-        padding: 1vw;
+        margin: 1vw 1vw 1vw 1vw;
+        /*margin-top: 5%;*/
+        margin-bottom: 5%;
+        /*padding: 1vw;*/
         font-family: 'Open Sans', sans-serif;
         color: #f7EDE2;
         text-align: center;
@@ -93,6 +95,14 @@
         text-decoration: none;
         font-size: 1.2rem;
     }
+
+    .links a{
+        padding: 20px;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+
+
 
     .indexLink:hover {
         margin: 0vw 1vw 1vw 1vw;
@@ -111,14 +121,19 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 3rem;
-        width: 75%;
+        width: 85%;
         border-radius: 1vw;
         margin-top: 10vw;
 
     }
 
-    .block h1 {
-        margin-top: 0;
+    .block h1{
+        margin-top:0;
+        font-family: 'Libre Baskerville', serif;
+    }
+
+    .top {
+        margin-bottom: 0;
     }
 
 }
